hphp/hack/test/typecheck/is_expression/option2.php
<?hh // partial

function g(?int $x) {}

function f(mixed $x) {
  if ($x is ?string) {
    g($x);
  }
}
